package stars;

public interface Authenticator {
    public boolean authenticate(String username, String password);
}
