@startuml

title __CONTROLLER's Class Diagram__\n

  namespace stars.controller {
    class stars.controller.AdminController {
        + AdminController()
        + addCourse()
        + addIndex()
        + addStudent()
        + dropIndex()
        + editAccess()
        + getCourseList()
        + getStudentList()
        + save()
    }
  }
  

  namespace stars.controller {
    interface stars.controller.Authenticator {
        {abstract} + authenticate()
    }
  }
  

  namespace stars.controller {
    class stars.controller.FlatFileAdminAuthenticator {
        - ADMIN_ACCOUNT_FILE : String
        + authenticate()
    }
  }
  

  namespace stars.controller {
    class stars.controller.FlatFileStudentAuthenticator {
        - STUDENT_ACCOUNTS_FILE : String
        + addStudent()
        + authenticate()
        + editAccess()
    }
  }
  

  namespace stars.controller {
    class stars.controller.IndexStudentAdder {
        + addStudent()
    }
  }
  

  namespace stars.controller {
    class stars.controller.IndexStudentDropper {
        + dropStudent()
    }
  }
  

  namespace stars.controller {
    class stars.controller.IndexStudentSwopper {
        + swopStudent()
    }
  }
  

  namespace stars.controller {
    class stars.controller.LoginController {
        + verifyLogin()
    }
  }
  

  namespace stars.controller {
    interface stars.controller.StudentAuthenticator {
        {abstract} + addStudent()
        {abstract} + editAccess()
    }
  }
  

  namespace stars.controller {
    class stars.controller.StudentController {
        + StudentController()
        + addIndex()
        + changeIndex()
        + dropIndex()
        + getCourseList()
        + getRegisteredIndex()
        + save()
        + swopIndex()
    }
  }
  

  namespace stars.controller {
    class stars.controller.TimetableClashChecker {
        + checkClash()
        + checkClash()
    }
  }
  

  stars.controller.AdminController o-- stars.entity.CourseDB : courseInfo
  stars.controller.AdminController o-- stars.entity.StudentDB : studentInfo
  stars.controller.FlatFileAdminAuthenticator .up.|> stars.controller.Authenticator
  stars.controller.FlatFileStudentAuthenticator .up.|> stars.controller.StudentAuthenticator
  stars.controller.LoginController o-- stars.boundary.SelectUI : ui
  stars.controller.StudentController o-- stars.entity.CourseDB : courseInfo
  stars.controller.StudentController o-- stars.entity.Student : myStudent
  stars.controller.StudentController o-- stars.entity.StudentDB : studentInfo


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
